...
        return 'Store Type';
      case 3:
        return 'Business Info';
      case 4:
        return 'Select Category';
      case 5:
        return 'Upload Documents';
      case 6:
        return 'Store Address';
      default:
        return 'Register';
    }
  }
...
